# simple-c-database

./: .gitignore  CMakeLists.txt  TODO.md  build.sh  cli.c  cli.h  command.c  command.h  hashing_functionality.c  hashing_functionality.h  hashset.c  hashset.h  hashtable.c  hashtable.h  key-value_db.c  key-value_db.h  main.c  readme.md  string_functionality.c  string_functionality.h
.cache/clangd/index/: command.c.3C1FEBFB8BD73CCC.idx  command.c.AC81169080DAAD5C.idx  command.h.948B4EF05760CEC0.idx  command.h.B75D83EF300B4005.idx  hashing_functionality.c.CFBC13226D86E40C.idx  hashing_functionality.c.E8CB05D06048C9AA.idx  hashing_functionality.h.182C6E463D4497AE.idx  hashing_functionality.h.F04D974A9F618986.idx  hashtable.c.58A95CA45EBF408F.idx  hashtable.c.D27CA8BF8B97C91A.idx  hashtable.h.BD295E66CC3AD06E.idx  hashtable.h.E500B2541C03E364.idx  main.c.3A38119AC0859624.idx  server.c.D61DD51627F949C7.idx  server.h.7FE4B08DD6450ABF.idx  string_functionality.c.085E375CBECB9777.idx  string_functionality.h.047A5F22C3EE1681.idx  string_functionality.h.C4A21E9363C1723C.idx
src/: bitwise_functionality.c  bitwise_functionality.h  command.c  command.h  hashing_functionality.c  hashtable.c  hashtable.h  server.c  server.h  string_functionality.c  string_functionality.h
tools/scripts/: .gitignore  SCDClient
